# canopus

./: .clippy.toml  .gitignore  CLAUDE.md  Cargo.toml  README.md  canopus  deny.toml  justfile  nextest.toml  services.toml  supervisor_demo.rs
.claude/: settings.local.json
.git-hooks/: pre-commit
.github/: copilot-instructions.md
.github/workflows/: ci.yml
cli/: Cargo.toml
cli/src/: error.rs  lib.rs  main.rs
cli/tests/: common.rs  start_config.rs  start_ready.rs
core/: Cargo.toml
core/src/: config.rs  error.rs  error_tests.rs  lib.rs  logging.rs  persistence.rs  port.rs  proxy_api.rs  utilities.rs
core/src/health/: error.rs  http.rs  mod.rs  tcp.rs  types.rs
core/src/process/: mod.rs  unix.rs
core/src/proxy/: mod.rs
core/src/supervisor/: adapters.rs  health_integration_tests.rs  integration_tests.rs  mod.rs  proxy_integration_tests.rs  restart_policy.rs  restart_policy_tests.rs  service_task.rs  supervisor_restart_tests.rs
core/tests/: process_unix.rs
daemon/: Cargo.toml
daemon/src/: bootstrap.rs  lib.rs  main.rs  simple_error.rs  simple_error_tests.rs  storage.rs
daemon/tests/: bootstrap_integration.rs  e2e_ipc_control.rs  e2e_scenarios.rs  recovery_integration.rs  runtime_config.rs
daemon/tests/common/: mod.rs
daenib/: Cargo.toml
daenib/src/: lib.rs  main.rs
desktop/: components.json  index.html  package-lock.json  package.json  svelte.config.js  tailwind.config.ts  tsconfig.json  vite.config.ts
desktop/src/: App.svelte  App.test.ts  app.css  vitest.setup.ts
desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
desktop/src-tauri/capabilities/: default.json
desktop/src-tauri/src/: lib.rs  main.rs  state.rs
desktop/src-tauri/src/commands/: inbox.rs  mod.rs  projects.rs  services.rs
desktop/src/lib/: api.ts  stores.ts  types.ts  utils.ts
desktop/src/lib/components/: InboxItem.svelte  InboxView.svelte  LogViewer.svelte  MoveToProjectModal.svelte  ProjectsView.svelte  ServiceCard.svelte  Sidebar.svelte  overflow.css
desktop/src/lib/components/ui/: Button.svelte
desktop/src/routes/: +layout.svelte
desktop/src/test/stubs/: InboxViewStub.svelte  ProjectsViewStub.svelte  SidebarStub.svelte
docs/: LINTING.md  config.md  desktop-prd.md  health-probes-design.md
docs/plans/: 2026-03-03-f8-bulk-project-actions-design.md  2026-03-03-f8-bulk-project-actions.md  2026-03-04-pr-review-fixes-design.md  2026-03-04-pr-review-fixes.md
docs/superpowers/plans/: 2026-03-29-app-svelte-coverage.md
docs/superpowers/specs/: 2026-03-29-app-svelte-coverage-design.md
e2e-tests/: Cargo.toml  README.md
e2e-tests/tests/: http_flow.rs
examples/: runtime.toml  services.toml
hooks/: Cargo.toml  README.md  claude-code.sh  codex.sh  opencode.sh  windsurf.json
hooks/src/: lib.rs
inbox/: Cargo.toml
inbox/src/: error.rs  item.rs  lib.rs  notify.rs  store.rs
inbox/tests/: error_tests.rs  item_tests.rs  notify_tests.rs  store_tests.rs
ipc/: Cargo.toml
ipc/src/: error.rs  error_tests.rs  lib.rs  server.rs  uds_client.rs
schema/: Cargo.toml
schema/src/: events.rs  json_roundtrip_tests.rs  lib.rs  service.rs
schemas/: ClientConfig.json  DaemonConfig.json  Event.json  Message.json  Response.json  SystemState.json
schemas/ts/: index.d.ts
xtask/: Cargo.toml
xtask/src/: gen_schemas.rs  main.rs
