[workspace]
resolver = "2"
members = [
    "core",
    "daenib", 
    "cli"
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/yourusername/canopus"

[workspace.dependencies]
# Common dependencies that can be shared across crates
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
clap = { version = "4.0", features = ["derive"] }
