[package]
name = "cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Command-line interface for the Canopus project"
readme = "../README.md"
keywords = ["cli", "command-line", "client", "interface"]
categories = ["command-line-utilities"]

[dependencies]
tokio = { workspace = true }
clap = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
ipc = { workspace = true }
schema = { workspace = true }
canopus-core = { workspace = true }

[[bin]]
name = "canopus"
path = "src/main.rs"
