[package]
name = "cli"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Command-line interface for the Canopus project"
readme = "../README.md"
keywords = ["cli", "command-line", "client", "interface"]
categories = ["command-line-utilities"]

[dependencies]
tokio = { workspace = true }
clap = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
serde_json = { workspace = true }
ipc = { workspace = true }
schema = { workspace = true }
canopus-core = { workspace = true }
canopus-inbox = { workspace = true }

[[bin]]
name = "canopus"
path = "src/main.rs"

[dev-dependencies]
daemon = { workspace = true }
schema = { workspace = true }
tempfile = "3"
