[package]
name = "canopus-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core functionality and utilities for the Canopus project"
readme = "../README.md"
keywords = ["core", "utilities", "system", "daemon"]
categories = ["development-tools", "system", "api-bindings"]

[dependencies]
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dashmap = "5.5"
once_cell = "1.19"

schema = { path = "../schema" }

[lib]
name = "canopus_core"
path = "src/lib.rs"
