[package]
name = "canopus-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core functionality and utilities for the Canopus project"
readme = "../README.md"
keywords = ["core", "utilities", "system", "daemon"]
categories = ["development-tools", "system", "api-bindings"]

[dependencies]
serde = { workspace = true, features = ["derive"] }
schemars = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
toml = "0.8"
dashmap = "5.5"
once_cell = "1.19"
tokio = { workspace = true, features = ["net", "time", "process", "io-util"] }
async-trait = "0.1"
hyper = { version = "0.14", features = ["client", "server", "http1", "tcp"] }

# Unix process management
[target.'cfg(unix)'.dependencies]
nix = { version = "0.27", default-features = false, features = ["process", "signal"] }
libc = "0.2"

schema = { path = "../schema" }

[dev-dependencies]
wait-timeout = "0.2"
tokio-test = "0.4"

[lib]
name = "canopus_core"
path = "src/lib.rs"

[[bin]]
name = "supervisor_demo"
path = "../supervisor_demo.rs"
