[package]
name = "daemon"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Daemon service implementation for the Canopus project"
readme = "../README.md"
keywords = ["daemon", "service", "server", "system"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
tokio = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

schema = { workspace = true }
ipc = { workspace = true, features = ["supervisor"] }
canopus-core = { workspace = true }

[[bin]]
name = "daemon"
path = "src/main.rs"
