[package]
name = "daemon"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Daemon service implementation for the Canopus project"
readme = "../README.md"
keywords = ["daemon", "service", "server", "system"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
tokio = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true, features = ["derive"] }
anyhow = "1"
rusqlite = { version = "0.38.0", features = ["bundled"] }
async-trait = "0.1"

schema = { workspace = true }
ipc = { workspace = true, features = ["supervisor"] }
canopus-core = { workspace = true }

[[bin]]
name = "daemon"
path = "src/main.rs"

[[bin]]
name = "toy_http"
path = "src/bin/toy_http.rs"

[[bin]]
name = "e2e_http"
path = "src/bin/e2e_http.rs"

[dev-dependencies]
tempfile = "3"
