[package]
name = "daenib"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
core = { path = "../core" }
tokio.workspace = true
serde.workspace = true
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

[[bin]]
name = "daenib"
path = "src/main.rs"
