[package]
name = "e2e-tests"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tokio = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }

# Workspace crates under test
daemon = { path = "../daemon" }
ipc = { path = "../ipc" }
canopus-core = { path = "../core" }
schema = { path = "../schema" }

tempfile = "3"
