[package]
name = "ipc"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Inter-process communication utilities for the Canopus project"
readme = "../README.md"
keywords = ["ipc", "communication", "network", "tcp"]
categories = ["network-programming", "api-bindings"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
async-trait = "0.1"
canopus-core = { path = "../core", optional = true }

schema = { path = "../schema" }

[dev-dependencies]
tempfile = "3"

[features]
default = []
supervisor = ["canopus-core"]

[target.'cfg(unix)'.dependencies]
nix = { version = "0.28", default-features = false, features = ["fs", "user"] }
