[package]
name = "xtask"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Build tasks and automation utilities for the Canopus project"
readme = "../README.md"
keywords = ["build", "tasks", "automation", "development"]
categories = ["development-tools"]

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
anyhow = { workspace = true }
clap = { workspace = true }
serde_json = { workspace = true }
schemars = { workspace = true }

schema = { path = "../schema" }

[dev-dependencies]
tempfile = "3.0"
